# context-atoms

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
atoms/: __init__.py  cli.py  inject.py  lint.py  schema.py  select.py
docs/design/: README.md  design.md  open-questions.md
docs/premortem/: context-atoms.html  context-atoms.md
experiment/: AUTONOMOUS_PLAN.md  FINDINGS.md  README.md  RESULTS.md  RESULTS_haiku.md  claude_cli.py  extract.py  harness.py  mine.py  profiles.py  results.jsonl  results_haiku.jsonl  results_smoke.jsonl  runner.py  score.py
experiment/atoms/: manifest.json
experiment/autopod/: RESULTS.md  results.jsonl
experiment/pg-hard/: RESULTS.md  results.jsonl
experiment/sqlglot/: RESULTS.md  results.jsonl  results_smoke.jsonl
experiment/tasks/: index.json  task-0009-simple.json  task-0013-medium.json  task-0014-novel.json  task-0022-medium.json  task-0044-medium.json  task-0052-novel.json  task-0058-medium.json  task-0061-medium.json
fixtures/: .archmap.yaml
fixtures/src/: consumer_helper_1.ts  consumer_service_1.ts  consumer_service_2.ts  consumer_service_3.ts  consumer_service_4.ts  consumer_service_5.ts  consumer_utils_1.ts  consumer_utils_10.ts  consumer_utils_11.ts  consumer_utils_12.ts  consumer_utils_2.ts  consumer_utils_3.ts  consumer_utils_4.ts  consumer_utils_5.ts  consumer_utils_6.ts  consumer_utils_7.ts  consumer_utils_8.ts  consumer_utils_9.ts  helper.ts  service.ts  utils.ts
src/: cache.ts  churn.ts  classify.ts  config.ts  graph.ts  risk.ts
tests/: test_atoms.py
(+476 files in other folders)
