[project]
name = "context-atoms"
version = "0.0.0"
description = "Tool-neutral, repo-local context-persistence for AI coding agents (v0 experiment substrate)"
requires-python = ">=3.9"
dependencies = ["pyyaml>=6.0"]

[project.scripts]
atoms = "atoms.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
